--- a/package.json
+++ b/package.json
@@ -1,53 +1,15 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "@dschau/wedding",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "@emotion/core": "^10.0.7",
-    "@emotion/styled": "^10.0.7",
-    "gatsby": "^2.1.4",
-    "gatsby-image": "^2.0.29",
-    "gatsby-plugin-emotion": "^4.0.3",
-    "gatsby-plugin-manifest": "^2.0.17",
-    "gatsby-plugin-offline": "^2.0.23",
-    "gatsby-plugin-react-helmet": "^3.0.6",
-    "gatsby-plugin-sharp": "^2.0.20",
-    "gatsby-plugin-typography": "^2.2.7",
-    "gatsby-source-filesystem": "^2.0.20",
-    "gatsby-transformer-sharp": "^2.1.13",
-    "minireset.css": "^0.0.4",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^3.4.0",
-    "react-typography": "^0.16.18",
-    "smooth-scroll": "^15.0.0",
-    "typography": "^0.16.18",
-    "typography-theme-funston": "^0.16.18"
-  },
-  "keywords": [
-    "gatsby"
-  ],
+  "version": "1.0.0",
+  "main": "n/a",
+  "repository": "https://github.com/DSchau/maggieanddustin.com.git",
+  "author": "Dustin Schau <dustinschau@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+    "build": "yarn workspaces run build"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
-  "devDependencies": {
-    "fs-extra": "^7.0.1",
-    "sharp-cli": "^1.9.0"
-  }
+  "workspaces": [
+    "site"
+  ]
 }
