--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ executors:
     working_directory: ~/infra
     docker:
       - image: hashicorp/terraform:<< parameters.image >>
+      - image: circleci/node:10
 
 aliases:
   restore_cache: &restore_cache
