--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ commands:
       - run:
           name: Install Terraform
           command: |
+            mkdir -p /tmp/tf/
             wget https://releases.hashicorp.com/terraform/0.11.13/terraform_0.11.13_linux_amd64.zip
             unzip terraform_0.11.13_linux_amd64.zip -d /tmp/tf/terraform
       - <<: *restore_cache
