--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,8 @@ commands:
         type: string
         default: "plan"
     steps:
-      - checkout
+      - checkout:
+          path: ~/terraform
       - run: echo 'export PATH=/tmp/tf:$PATH' >> $BASH_ENV
       - run:
           name: Install Terraform
