--- a/infra/package.json
+++ b/infra/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bunyan": "^1.8.12",
     "date-fns": "^1.30.1",
+    "fast-levenshtein": "^2.0.6",
     "google-spreadsheet": "^2.0.7",
     "pify": "^4.0.1",
     "yup": "^0.27.0"
