--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,8 +41,8 @@ commands:
       - run:
           name: Provide Terraform Variables
           command: |
-            echo "client_email="${CLIENT_EMAIL}"" >> terraform.tfvars
-            echo "private_key="${PRIVATE_KEY}"" >> terraform.tfvars
+            echo "client_email=\"${CLIENT_EMAIL}\"" >> terraform.tfvars
+            echo "private_key=\"${PRIVATE_KEY}\"" >> terraform.tfvars
             cat terraform.tfvars
       - run:
           name: Install Terraform
