--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ commands:
             echo "client_email=\"${CLIENT_EMAIL}\"" >> terraform.tfvars
             echo "private_key=\"${PRIVATE_KEY}\"" >> terraform.tfvars
             cat terraform.tfvars
+          working_directory: "<< parameters.working_directory >>"
       - run:
           name: Install Terraform
           command: |
