--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,6 +104,7 @@ workflows:
       - build
       - plan
       - apply:
+          type: approval
           requires:
             - plan
           filters:
