--- a/site/package.json
+++ b/site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "@maggie-and-dustin/wedding",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
