--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "author": "Dustin Schau <dustinschau@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "yarn workspaces run build"
+    "build": "yarn workspace @maggie-and-dustin/wedding run build"
   },
   "workspaces": [
-    "site"
+    "site",
+    "themes/*"
   ]
 }
