chore: keep iterating

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Dustin Schau <dustinschau@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "yarn workspace @maggie-and-dustin/wedding run build"
+    "build": "yarn workspace @maggie-and-dustin/wedding run build",
+    "start": "yarn workspace @maggie-and-dustin/wedding run start"
   },
   "workspaces": [
     "site",
