--- a/themes/gatsby-theme-wedding-ui-daggie/package.json
+++ b/themes/gatsby-theme-wedding-ui-daggie/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-theme-wedding-ui-dustin-maggie",
+  "name": "gatsby-theme-wedding-ui-daggie",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Dustin Schau <dustinschau@gmail.com> (https://dustinschau.com)",
@@ -9,10 +9,12 @@
     "@emotion/styled": "^10.0.14",
     "@mdx-js/react": "^1.0.27",
     "@theme-ui/typography": "^0.2.23",
+    "formik": "^1.5.8",
     "gatsby-plugin-page-creator": "^2.1.5",
     "gatsby-plugin-theme-ui": "^0.2.23",
     "react-icons": "^3.7.0",
     "theme-ui": "^0.2.23",
-    "typography-theme-moraga": "^0.16.19"
+    "typography-theme-moraga": "^0.16.19",
+    "yup": "^0.27.0"
   }
 }
