--- a/site/package.json
+++ b/site/package.json
@@ -8,6 +8,7 @@
     "@emotion/core": "^10.0.15",
     "@emotion/styled": "^10.0.15",
     "@mdx-js/react": "^1.2.2",
+    "@theme-ui/typography": "^0.2.29",
     "gatsby": "^2.13.61",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-emotion": "^4.1.2",
@@ -26,7 +27,10 @@
     "react-helmet": "^5.2.0",
     "react-icons": "^3.4.0",
     "smooth-scroll": "^16.1.0",
-    "theme-ui": "^0.2.33"
+    "theme-ui": "^0.2.33",
+    "typeface-arvo": "^0.0.72",
+    "typeface-cabin": "^0.0.72",
+    "typography-theme-doelger": "^0.16.19"
   },
   "keywords": [
     "gatsby"
