--- a/infra/package.json
+++ b/infra/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^1.30.1",
     "fast-levenshtein": "^2.0.6",
     "google-spreadsheet": "^2.0.7",
+    "lodash": "^4.17.15",
     "pify": "^4.0.1",
     "yup": "^0.27.0"
   }
