--- a/site/package.json
+++ b/site/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^10.0.15",
     "@mdx-js/react": "^1.2.2",
     "@theme-ui/typography": "^0.2.29",
+    "formik": "^1.5.8",
     "gatsby": "^2.13.61",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-emotion": "^4.1.2",
@@ -30,7 +31,8 @@
     "theme-ui": "^0.2.33",
     "typeface-arvo": "^0.0.72",
     "typeface-cabin": "^0.0.72",
-    "typography-theme-doelger": "^0.16.19"
+    "typography-theme-doelger": "^0.16.19",
+    "yup": "^0.27.0"
   },
   "keywords": [
     "gatsby"
