--- a/site/package.json
+++ b/site/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^13.4.0",
+    "@contentful/rich-text-types": "^13.4.0",
     "@emotion/core": "^10.0.15",
     "@emotion/styled": "^10.0.15",
     "@mdx-js/react": "^1.2.2",
@@ -18,6 +20,7 @@
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.11",
     "gatsby-plugin-theme-ui": "^0.2.33",
+    "gatsby-source-contentful": "^2.1.65",
     "gatsby-source-filesystem": "^2.1.9",
     "gatsby-transformer-sharp": "^2.2.6",
     "gatsby-transformer-yaml": "^2.2.4",
@@ -53,6 +56,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "fs-extra": "^8.1.0",
     "sharp-cli": "^1.10.0"
   }
