--- a/site/package.json
+++ b/site/package.json
@@ -7,31 +7,31 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "@contentful/rich-text-types": "^13.4.0",
-    "@emotion/core": "^10.0.15",
-    "@emotion/styled": "^10.0.15",
-    "@mdx-js/react": "^1.2.2",
-    "@theme-ui/typography": "^0.2.29",
-    "formik": "^1.5.8",
-    "gatsby": "^2.13.61",
-    "gatsby-image": "^2.2.8",
-    "gatsby-plugin-emotion": "^4.1.2",
-    "gatsby-plugin-manifest": "^2.2.5",
-    "gatsby-plugin-offline": "^2.2.5",
-    "gatsby-plugin-react-helmet": "^3.1.3",
-    "gatsby-plugin-sharp": "^2.2.11",
-    "gatsby-plugin-theme-ui": "^0.2.33",
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
+    "@mdx-js/react": "^1.5.1",
+    "@theme-ui/typography": "^0.2.46",
+    "formik": "^2.0.6",
+    "gatsby": "^2.18.5",
+    "gatsby-image": "^2.2.34",
+    "gatsby-plugin-emotion": "^4.1.16",
+    "gatsby-plugin-manifest": "^2.2.30",
+    "gatsby-plugin-offline": "^3.0.25",
+    "gatsby-plugin-react-helmet": "^3.1.16",
+    "gatsby-plugin-sharp": "^2.3.4",
+    "gatsby-plugin-theme-ui": "^0.2.43",
     "gatsby-source-contentful": "^2.1.65",
-    "gatsby-source-filesystem": "^2.1.9",
-    "gatsby-transformer-sharp": "^2.2.6",
-    "gatsby-transformer-yaml": "^2.2.4",
+    "gatsby-source-filesystem": "^2.1.39",
+    "gatsby-transformer-sharp": "^2.3.6",
+    "gatsby-transformer-yaml": "^2.2.18",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.0",
-    "react-icons": "^3.4.0",
+    "react-icons": "^3.8.0",
     "smooth-scroll": "^16.1.0",
-    "theme-ui": "^0.2.33",
+    "theme-ui": "^0.2.49",
     "typeface-arvo": "^0.0.72",
     "typeface-cabin": "^0.0.72",
     "typography-theme-doelger": "^0.16.19",
@@ -58,6 +58,9 @@
   "devDependencies": {
     "dotenv": "^8.2.0",
     "fs-extra": "^8.1.0",
-    "sharp-cli": "^1.10.0"
+    "husky": "^3.1.0",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
+    "sharp-cli": "^1.13.1"
   }
 }
