--- a/site/package.json
+++ b/site/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.8.0",
+    "react-medium-image-zoom": "^3.1.2",
     "smooth-scroll": "^16.1.0",
     "theme-ui": "^0.2.49",
     "typeface-arvo": "^0.0.72",
