--- a/site/package.json
+++ b/site/package.json
@@ -13,13 +13,13 @@
     "@theme-ui/typography": "^0.2.46",
     "autosize": "^4.0.2",
     "formik": "^2.0.6",
-    "gatsby": "^2.18.12-jobs-api-v2.59",
+    "gatsby": "^2.19.1",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-emotion": "^4.1.16",
     "gatsby-plugin-manifest": "^2.2.30",
     "gatsby-plugin-offline": "^3.0.25",
     "gatsby-plugin-react-helmet": "^3.1.16",
-    "gatsby-plugin-sharp": "^2.3.11-sharp-jobs-v2.70",
+    "gatsby-plugin-sharp": "^2.4.0",
     "gatsby-plugin-theme-ui": "^0.2.43",
     "gatsby-source-contentful": "^2.1.65",
     "gatsby-source-filesystem": "^2.1.39",
