--- a/site/package.json
+++ b/site/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-emotion": "^4.1.16",
     "gatsby-plugin-manifest": "^2.2.30",
     "gatsby-plugin-offline": "^3.0.25",
+    "gatsby-plugin-preact": "^3.1.25",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.11-sharp-jobs-v2.82",
     "gatsby-plugin-theme-ui": "^0.2.43",
@@ -26,6 +27,7 @@
     "gatsby-transformer-sharp": "^2.3.6",
     "gatsby-transformer-yaml": "^2.2.18",
     "normalize.css": "^8.0.1",
+    "preact": "^10.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
