--- a/site/package.json
+++ b/site/package.json
@@ -66,6 +66,7 @@
     "dotenv": "^8.2.0",
     "fs-extra": "^8.1.0",
     "husky": "^3.1.0",
+    "limax": "^2.0.0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
     "sharp-cli": "^1.13.1"
