--- a/site/package.json
+++ b/site/package.json
@@ -16,6 +16,7 @@
     "gatsby": "^2.18.12-jobs-api-v2.67",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-emotion": "^4.1.16",
+    "gatsby-plugin-layout": "^1.1.22",
     "gatsby-plugin-manifest": "^2.2.30",
     "gatsby-plugin-offline": "^3.0.25",
     "gatsby-plugin-preact": "^3.1.25",
