--- a/site/package.json
+++ b/site/package.json
@@ -6,44 +6,44 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
-    "@contentful/rich-text-types": "^13.4.0",
-    "@emotion/core": "^10.0.22",
-    "@emotion/styled": "^10.0.23",
-    "@mdx-js/react": "^1.5.1",
-    "@theme-ui/typography": "^0.2.46",
+    "@contentful/rich-text-types": "^14.0.1",
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
+    "@mdx-js/react": "^1.5.5",
+    "@theme-ui/typography": "^0.3.0",
     "autosize": "^4.0.2",
-    "formik": "^2.0.6",
-    "gatsby": "^2.18.12-jobs-api-v2.67",
-    "gatsby-image": "^2.2.34",
-    "gatsby-plugin-emotion": "^4.1.16",
+    "formik": "^2.1.3",
+    "gatsby": "^2.19.12",
+    "gatsby-image": "^2.2.40",
+    "gatsby-plugin-emotion": "^4.1.22",
     "gatsby-plugin-layout": "^1.1.22",
-    "gatsby-plugin-manifest": "^2.2.30",
-    "gatsby-plugin-offline": "^3.0.25",
-    "gatsby-plugin-preact": "^3.1.25",
-    "gatsby-plugin-react-helmet": "^3.1.16",
-    "gatsby-plugin-sharp": "^2.3.11-sharp-jobs-v2.82",
-    "gatsby-plugin-theme-ui": "^0.2.43",
-    "gatsby-source-contentful": "^2.1.65",
-    "gatsby-source-filesystem": "^2.1.39",
-    "gatsby-transformer-sharp": "^2.3.6",
-    "gatsby-transformer-yaml": "^2.2.18",
+    "gatsby-plugin-manifest": "^2.2.41",
+    "gatsby-plugin-offline": "^3.0.34",
+    "gatsby-plugin-preact": "^3.1.26",
+    "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-plugin-theme-ui": "^0.3.0",
+    "gatsby-source-contentful": "^2.1.85",
+    "gatsby-source-filesystem": "^2.1.48",
+    "gatsby-transformer-sharp": "^2.3.14",
+    "gatsby-transformer-yaml": "^2.2.24",
     "normalize.css": "^8.0.1",
     "preact": "^10.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.0",
-    "react-icons": "^3.8.0",
+    "react-icons": "^3.9.0",
     "react-medium-image-zoom": "^4.0.1",
-    "smooth-scroll": "^16.1.0",
-    "theme-ui": "^0.2.49",
-    "typeface-arvo": "^0.0.72",
+    "smooth-scroll": "^16.1.2",
+    "theme-ui": "^0.3.1",
+    "typeface-arvo": "^1.1.3",
     "typeface-biorhyme": "^0.0.71",
     "typeface-cabin": "^0.0.72",
     "typeface-parisienne": "^0.0.72",
     "typeface-vollkorn": "^0.0.72",
     "typography-theme-doelger": "^0.16.19",
-    "yup": "^0.27.0"
+    "yup": "^0.28.1"
   },
   "keywords": [
     "gatsby"
@@ -66,9 +66,9 @@
   "devDependencies": {
     "dotenv": "^8.2.0",
     "fs-extra": "^8.1.0",
-    "husky": "^3.1.0",
+    "husky": "^4.2.1",
     "limax": "^2.0.0",
-    "lint-staged": "^9.5.0",
+    "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "sharp-cli": "^1.13.1"
   }
