--- a/site/package.json
+++ b/site/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-preact": "^3.1.26",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-plugin-sitemap": "^2.2.27",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-contentful": "^2.1.85",
     "gatsby-source-filesystem": "^2.1.48",
