--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^2.19.12",
     "gatsby-image": "^2.2.40",
     "gatsby-plugin-emotion": "^4.1.22",
+    "gatsby-plugin-google-analytics": "^2.1.35",
     "gatsby-plugin-layout": "^1.1.22",
     "gatsby-plugin-manifest": "^2.2.41",
     "gatsby-plugin-offline": "^3.0.34",
