--- a/infra/package.json
+++ b/infra/package.json
@@ -10,13 +10,17 @@
   "dependencies": {
     "apollo-server-lambda": "^2.9.16",
     "bunyan": "^1.8.12",
+    "common-tags": "^1.8.0",
     "date-fns": "^1.30.1",
     "fast-levenshtein": "^2.0.6",
     "google-spreadsheet": "^2.0.7",
     "graphql": "^14.6.0",
     "lodash": "^4.17.15",
     "pify": "^4.0.1",
+    "twilio": "^3.39.5",
     "yup": "^0.27.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "dotenv": "^8.2.0"
+  }
 }
