--- a/site/package.json
+++ b/site/package.json
@@ -33,7 +33,9 @@
     "normalize.css": "^8.0.1",
     "preact": "^10.2.1",
     "prop-types": "^15.7.2",
+    "query-string": "^6.11.0",
     "react": "^16.12.0",
+    "react-async-script-loader": "^0.3.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.9.0",
