--- a/site/package.json
+++ b/site/package.json
@@ -14,7 +14,7 @@
     "@theme-ui/typography": "^0.3.0",
     "autosize": "^4.0.2",
     "formik": "^2.1.3",
-    "gatsby": "^2.20.29",
+    "gatsby": "^2.24.69-qod.21",
     "gatsby-image": "^2.2.40",
     "gatsby-plugin-emotion": "^4.1.22",
     "gatsby-plugin-google-analytics": "^2.1.35",
@@ -55,7 +55,8 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build",
+    "build": "gatsby build",
+    "bench": "time ./bench.sh",
     "develop": "gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
