--- a/site/package.json
+++ b/site/package.json
@@ -14,8 +14,8 @@
     "@theme-ui/typography": "^0.3.0",
     "autosize": "^4.0.2",
     "formik": "^2.2.1",
-    "gatsby": "^2.28.1",
-    "gatsby-image": "^2.4.21",
+    "gatsby": "^2.30.0",
+    "gatsby-image": "^2.9.0",
     "gatsby-plugin-emotion": "^4.1.22",
     "gatsby-plugin-google-analytics": "^2.3.19",
     "gatsby-plugin-layout": "^1.3.13",
@@ -23,7 +23,7 @@
     "gatsby-plugin-offline": "^3.2.37",
     "gatsby-plugin-preact": "^4.0.16",
     "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.6.43",
+    "gatsby-plugin-sharp": "^2.12.0",
     "gatsby-plugin-sitemap": "^2.4.17",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-contentful": "^3.0.3",
@@ -55,8 +55,8 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "GATSBY_EXPERIMENTAL_ROUTING_APIS=1 gatsby build",
-    "develop": "GATSBY_EXPERIMENTAL_ROUTING_APIS=1 gatsby develop",
+    "build": "gatsby build",
+    "develop": "gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
