--- a/site/package.json
+++ b/site/package.json
@@ -18,7 +18,7 @@
     "gatsby-plugin-emotion": "^4.1.22",
     "gatsby-plugin-google-analytics": "^2.3.19",
     "gatsby-plugin-layout": "^1.3.13",
-    "gatsby-plugin-manifest": "^2.4.35",
+    "gatsby-plugin-manifest": "^2.11.0",
     "gatsby-plugin-offline": "^3.2.37",
     "gatsby-plugin-preact": "^4.0.16",
     "gatsby-plugin-react-helmet": "^3.3.14",
@@ -27,7 +27,7 @@
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-contentful": "^4.5.3",
     "gatsby-source-filesystem": "^2.3.35",
-    "gatsby-transformer-sharp": "^2.5.19",
+    "gatsby-transformer-sharp": "^2.11.0",
     "gatsby-transformer-yaml": "^2.4.15",
     "normalize.css": "^8.0.1",
     "preact": "^10.5.5",
@@ -62,10 +62,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/dschau/maggieanddustin.com"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
@@ -73,7 +70,6 @@
     "husky": "^4.3.0",
     "limax": "^2.1.0",
     "lint-staged": "^10.4.2",
-    "prettier": "^2.1.2",
-    "sharp-cli": "^1.14.1"
+    "prettier": "^2.1.2"
   }
 }
