--- a/site/package.json
+++ b/site/package.json
@@ -16,6 +16,7 @@
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.10.0",
     "gatsby-plugin-emotion": "^4.1.22",
+    "gatsby-plugin-gatsby-cloud": "^0.0.5",
     "gatsby-plugin-google-analytics": "^2.3.19",
     "gatsby-plugin-layout": "^1.3.13",
     "gatsby-plugin-manifest": "^2.11.0",
