--- a/site/package.json
+++ b/site/package.json
@@ -18,18 +18,17 @@
     "gatsby-plugin-emotion": "^4.1.22",
     "gatsby-plugin-gatsby-cloud": "^0.0.5",
     "gatsby-plugin-google-analytics": "^2.3.19",
-    "gatsby-plugin-image": "^0.8.0-next.0",
     "gatsby-plugin-layout": "^1.3.13",
     "gatsby-plugin-manifest": "^2.11.0",
     "gatsby-plugin-offline": "^3.2.37",
     "gatsby-plugin-preact": "^4.0.16",
     "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.15.0-next.0",
+    "gatsby-plugin-sharp": "^2.13.1",
     "gatsby-plugin-sitemap": "^2.4.17",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-contentful": "^4.5.3",
     "gatsby-source-filesystem": "^2.3.35",
-    "gatsby-transformer-sharp": "^2.13.0-next.0",
+    "gatsby-transformer-sharp": "^2.11.0",
     "gatsby-transformer-yaml": "^2.4.15",
     "normalize.css": "^8.0.1",
     "preact": "^10.5.5",
