--- a/site/package.json
+++ b/site/package.json
@@ -16,6 +16,7 @@
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.10.0",
     "gatsby-plugin-emotion": "^4.1.22",
+    "gatsby-plugin-functions": "^0.1.0-3",
     "gatsby-plugin-gatsby-cloud": "^0.0.5",
     "gatsby-plugin-google-analytics": "^2.3.19",
     "gatsby-plugin-image": "^0.8.0-next.0",
