--- a/site/package.json
+++ b/site/package.json
@@ -12,6 +12,7 @@
     "@reach/skip-nav": "^0.11.2",
     "@theme-ui/typography": "^0.3.0",
     "autosize": "^4.0.2",
+    "firebase": "^8.2.6",
     "formik": "^2.2.1",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.10.0",
