--- a/site/package.json
+++ b/site/package.json
@@ -12,9 +12,10 @@
     "@reach/skip-nav": "^0.11.2",
     "@theme-ui/typography": "^0.3.0",
     "autosize": "^4.0.2",
-    "gatsby": "^2.31.1",
+    "gatsby": "^3.0.0-next.8",
     "gatsby-image": "^2.10.0",
     "gatsby-plugin-emotion": "^4.1.22",
+    "gatsby-plugin-functions": "^0.1.0-4",
     "gatsby-plugin-gatsby-cloud": "^0.0.5",
     "gatsby-plugin-google-analytics": "^2.3.19",
     "gatsby-plugin-image": "^1.0.0-next.0",
