--- a/site/package.json
+++ b/site/package.json
@@ -12,7 +12,7 @@
     "@reach/skip-nav": "^0.11.2",
     "@theme-ui/typography": "^0.3.0",
     "autosize": "^4.0.2",
-    "gatsby": "^3.0.0-next.8",
+    "gatsby": "^2.32.4",
     "gatsby-image": "^2.10.0",
     "gatsby-plugin-emotion": "^4.1.22",
     "gatsby-plugin-functions": "^0.1.0-4",
