--- a/site/package.json
+++ b/site/package.json
@@ -43,6 +43,7 @@
     "react-medium-image-zoom": "^4.3.1",
     "smooth-scroll": "^16.1.3",
     "theme-ui": "^0.3.1",
+    "twilio": "^3.56.0",
     "typeface-arvo": "^1.1.13",
     "typeface-biorhyme": "^1.1.13",
     "typeface-cabin": "^1.1.13",
