feat: add rsvp handler

--- a/site/package.json
+++ b/site/package.json
@@ -12,6 +12,7 @@
     "@reach/skip-nav": "^0.11.2",
     "@theme-ui/typography": "^0.3.0",
     "autosize": "^4.0.2",
+    "firebase": "^8.2.9",
     "gatsby": "^2.32.4",
     "gatsby-image": "^2.10.0",
     "gatsby-plugin-emotion": "^4.1.22",
