--- a/site/package.json
+++ b/site/package.json
@@ -11,9 +11,8 @@
     "@mdx-js/react": "^1.6.19",
     "@reach/skip-nav": "^0.11.2",
     "@theme-ui/typography": "^0.3.0",
+    "airtable": "^0.10.1",
     "autosize": "^4.0.2",
-    "firebase": "^8.2.9",
-    "firebase-admin": "^9.5.0",
     "gatsby": "^2.32.4",
     "gatsby-image": "^2.10.0",
     "gatsby-plugin-emotion": "^4.1.22",
