--- a/site/package.json
+++ b/site/package.json
@@ -11,10 +11,13 @@
     "@mdx-js/react": "^1.6.19",
     "@reach/skip-nav": "^0.11.2",
     "@theme-ui/typography": "^0.3.0",
+    "airtable": "0.8.1",
     "autosize": "^4.0.2",
-    "gatsby": "^2.31.1",
+    "formik": "^2.2.6",
+    "gatsby": "^2.32.4",
     "gatsby-image": "^2.10.0",
     "gatsby-plugin-emotion": "^4.1.22",
+    "gatsby-plugin-functions": "^0.1.0-4",
     "gatsby-plugin-gatsby-cloud": "^0.0.5",
     "gatsby-plugin-google-analytics": "^2.3.19",
     "gatsby-plugin-image": "^1.0.0-next.0",
@@ -42,13 +45,15 @@
     "react-medium-image-zoom": "^4.3.1",
     "smooth-scroll": "^16.1.3",
     "theme-ui": "^0.3.1",
+    "twilio": "^3.56.0",
     "typeface-arvo": "^1.1.13",
     "typeface-biorhyme": "^1.1.13",
     "typeface-cabin": "^1.1.13",
     "typeface-parisienne": "^1.1.13",
     "typeface-vollkorn": "^1.1.13",
     "typography-theme-doelger": "^0.16.19",
-    "yup": "^0.29.3"
+    "unfetch": "^4.2.0",
+    "yup": "^0.32.9"
   },
   "keywords": [
     "gatsby"
