--- a/site/package.json
+++ b/site/package.json
@@ -10,6 +10,7 @@
     "@emotion/styled": "^10.0.27",
     "@mdx-js/react": "^1.6.19",
     "@reach/skip-nav": "^0.11.2",
+    "@sindresorhus/slugify": "^1.1.0",
     "@theme-ui/typography": "^0.3.0",
     "airtable": "0.8.1",
     "autosize": "^4.0.2",
