--- a/site/package.json
+++ b/site/package.json
@@ -14,26 +14,27 @@
     "airtable": "0.8.1",
     "autosize": "^4.0.2",
     "formik": "^2.2.6",
-    "gatsby": "^2.32.4",
-    "gatsby-plugin-emotion": "^4.1.22",
+    "gatsby": "^3.0.0-next.9",
+    "gatsby-plugin-emotion": "^6.0.0-next.0",
     "gatsby-plugin-functions": "^0.1.0-4",
-    "gatsby-plugin-gatsby-cloud": "^0.0.5",
-    "gatsby-plugin-google-analytics": "^2.3.19",
-    "gatsby-plugin-image": "^1.0.0-next.8",
-    "gatsby-plugin-layout": "^1.3.13",
-    "gatsby-plugin-manifest": "^2.11.0",
-    "gatsby-plugin-offline": "^3.2.37",
-    "gatsby-plugin-preact": "^4.0.16",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^3.0.0-next.8",
-    "gatsby-plugin-sitemap": "^2.4.17",
-    "gatsby-plugin-theme-ui": "^0.3.0",
-    "gatsby-source-contentful": "^4.5.3",
-    "gatsby-source-filesystem": "^3.0.0-next.3",
-    "gatsby-transformer-sharp": "^3.0.0-next.1",
-    "gatsby-transformer-yaml": "^2.4.15",
+    "gatsby-plugin-gatsby-cloud": "^2.0.0-next.0",
+    "gatsby-plugin-google-analytics": "^3.0.0-next.1",
+    "gatsby-plugin-image": "^1.0.0-next.9",
+    "gatsby-plugin-layout": "^2.0.0-next.0",
+    "gatsby-plugin-manifest": "^3.0.0-next.2",
+    "gatsby-plugin-offline": "^4.0.0-next.3",
+    "gatsby-plugin-preact": "^5.0.0-next.2",
+    "gatsby-plugin-react-helmet": "^4.0.0-next.0",
+    "gatsby-plugin-sharp": "^3.0.0-next.9",
+    "gatsby-plugin-sitemap": "^3.0.0-next.0",
+    "gatsby-plugin-theme-ui": "^0.6.0-alpha.7",
+    "gatsby-source-contentful": "^5.0.0-next.10",
+    "gatsby-source-filesystem": "^3.0.0-next.4",
+    "gatsby-transformer-sharp": "^3.0.0-next.2",
+    "gatsby-transformer-yaml": "^3.0.0-next.0",
     "normalize.css": "^8.0.1",
-    "preact": "^10.5.5",
+    "preact": "^10.5.12",
+    "preact-render-to-string": "^5.1.12",
     "prop-types": "^15.7.2",
     "query-string": "^6.13.6",
     "react": "^16.12.0",
