--- a/site/package.json
+++ b/site/package.json
@@ -17,7 +17,7 @@
     "gatsby": "^2.32.9",
     "gatsby-plugin-emotion": "^6.0.0-next.0",
     "gatsby-plugin-functions": "^0.1.0-4",
-    "gatsby-plugin-gatsby-cloud": "^2.0.0-next.0",
+    "gatsby-plugin-gatsby-cloud": "^1.0.2",
     "gatsby-plugin-google-analytics": "^3.0.0-next.1",
     "gatsby-plugin-image": "^1.0.0-next.9",
     "gatsby-plugin-layout": "^2.0.0-next.0",
