--- a/site/package.json
+++ b/site/package.json
@@ -15,32 +15,32 @@
     "autosize": "^4.0.2",
     "formik": "^2.2.6",
     "gatsby": "^3.1.0-next.3",
-    "gatsby-plugin-emotion": "^6.0.0-next.0",
-    "gatsby-plugin-functions": "^0.1.0-4",
-    "gatsby-plugin-gatsby-cloud": "^1.0.2",
-    "gatsby-plugin-google-analytics": "^3.0.0-next.1",
-    "gatsby-plugin-image": "^1.0.0-next.9",
-    "gatsby-plugin-layout": "^2.0.0-next.0",
-    "gatsby-plugin-manifest": "^3.0.0-next.2",
-    "gatsby-plugin-offline": "^4.0.0-next.3",
-    "gatsby-plugin-preact": "^5.0.0-next.2",
-    "gatsby-plugin-react-helmet": "^4.0.0-next.0",
-    "gatsby-plugin-sharp": "^3.0.0-next.9",
-    "gatsby-plugin-sitemap": "^3.0.0-next.0",
-    "gatsby-plugin-theme-ui": "^0.6.0-alpha.7",
-    "gatsby-source-contentful": "^5.0.0-next.10",
-    "gatsby-source-filesystem": "^3.0.0-next.4",
-    "gatsby-transformer-sharp": "^3.0.0-next.2",
-    "gatsby-transformer-yaml": "^3.0.0-next.0",
+    "gatsby-plugin-emotion": "^6.0.0",
+    "gatsby-plugin-functions": "^0.1.0-5",
+    "gatsby-plugin-gatsby-cloud": "^2.0.0",
+    "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-layout": "^2.0.0",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-preact": "^5.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-plugin-sitemap": "^3.0.0",
+    "gatsby-plugin-theme-ui": "^0.3.5",
+    "gatsby-source-contentful": "^5.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
+    "gatsby-transformer-yaml": "^3.0.0",
     "normalize.css": "^8.0.1",
     "preact": "^10.5.12",
     "preact-render-to-string": "^5.1.12",
     "prop-types": "^15.7.2",
     "query-string": "^6.13.6",
-    "react": "^16.12.0",
+    "react": "^17.0.1",
     "react-async-script-loader": "^0.3.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.0",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-medium-image-zoom": "^4.3.1",
     "smooth-scroll": "^16.1.3",
