--- a/site/package.json
+++ b/site/package.json
@@ -6,11 +6,11 @@
   "author": "Dustin Schau <dustinschau@gmail.com>",
   "dependencies": {
     "@contentful/rich-text-types": "^14.1.2",
-    "@emotion/core": "^10.0.27",
-    "@emotion/styled": "^10.0.27",
-    "@mdx-js/react": "^1.6.19",
-    "@reach/skip-nav": "^0.11.2",
-    "@theme-ui/typography": "^0.3.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@mdx-js/react": "^1.6.22",
+    "@reach/skip-nav": "^0.13.2",
+    "@theme-ui/typography": "^0.3.5",
     "airtable": "0.8.1",
     "autosize": "^4.0.2",
     "formik": "^2.2.6",
@@ -36,16 +36,16 @@
     "preact": "^10.5.12",
     "preact-render-to-string": "^5.1.12",
     "prop-types": "^15.7.2",
-    "query-string": "^6.13.6",
+    "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-async-script-loader": "^0.3.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^3.11.0",
+    "react-icons": "^4.2.0",
     "react-medium-image-zoom": "^4.3.1",
     "smooth-scroll": "^16.1.3",
-    "theme-ui": "^0.3.1",
-    "twilio": "^3.56.0",
+    "theme-ui": "^0.3.5",
+    "twilio": "^3.57.0",
     "typeface-arvo": "^1.1.13",
     "typeface-biorhyme": "^1.1.13",
     "typeface-cabin": "^1.1.13",
