--- a/site/package.json
+++ b/site/package.json
@@ -17,7 +17,7 @@
     "gatsby": "^3.1.0-next.3",
     "gatsby-plugin-emotion": "^6.0.0",
     "gatsby-plugin-functions": "^0.1.0-5",
-    "gatsby-plugin-gatsby-cloud": "^2.0.0",
+    "gatsby-plugin-gatsby-cloud": "^2.4.0-next.0",
     "gatsby-plugin-google-analytics": "^3.0.0",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-layout": "^2.0.0",
