--- a/site/package.json
+++ b/site/package.json
@@ -14,10 +14,10 @@
     "airtable": "0.8.1",
     "autosize": "^4.0.2",
     "formik": "^2.2.6",
-    "gatsby": "^3.1.0-next.3",
+    "gatsby": "^3.4.2",
     "gatsby-plugin-emotion": "^6.0.0",
-    "gatsby-plugin-functions": "^0.1.0-5",
-    "gatsby-plugin-gatsby-cloud": "^2.4.0-next.0",
+    "gatsby-plugin-functions": "^0.1.0-7",
+    "gatsby-plugin-gatsby-cloud": "^2.4.1",
     "gatsby-plugin-google-analytics": "^3.0.0",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-layout": "^2.0.0",
