--- a/site/package.json
+++ b/site/package.json
@@ -17,7 +17,7 @@
     "gatsby": "^3.4.2",
     "gatsby-plugin-emotion": "^6.0.0",
     "gatsby-plugin-functions": "^0.1.0-7",
-    "gatsby-plugin-gatsby-cloud": "^2.4.1",
+    "gatsby-plugin-gatsby-cloud": "2.6.0-alpha-gatsby-plugin-gatsby-cloud.37",
     "gatsby-plugin-google-analytics": "^3.0.0",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-layout": "^2.0.0",
