--- a/site/package.json
+++ b/site/package.json
@@ -14,7 +14,7 @@
     "airtable": "0.8.1",
     "autosize": "^4.0.2",
     "formik": "^2.2.6",
-    "gatsby": "^3.4.2",
+    "gatsby": "^3.5.0",
     "gatsby-plugin-emotion": "^6.0.0",
     "gatsby-plugin-functions": "^0.1.0-7",
     "gatsby-plugin-gatsby-cloud": "2.6.0-alpha-gatsby-plugin-gatsby-cloud.37",
@@ -32,6 +32,7 @@
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "gatsby-transformer-yaml": "^3.0.0",
+    "graphql-request": "^3.4.0",
     "normalize.css": "^8.0.1",
     "preact": "^10.5.12",
     "preact-render-to-string": "^5.1.12",
@@ -43,6 +44,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-medium-image-zoom": "^4.3.1",
+    "react-star-ratings": "^2.3.0",
     "smooth-scroll": "^16.1.3",
     "theme-ui": "^0.3.5",
     "twilio": "^3.57.0",
