--- a/site/package.json
+++ b/site/package.json
@@ -38,9 +38,9 @@
     "preact-render-to-string": "^5.1.12",
     "prop-types": "^15.7.2",
     "query-string": "^6.14.1",
-    "react": "^17.0.1",
+    "react": "^18.0.0-alpha-c96b78e0e",
     "react-async-script-loader": "^0.3.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.0.0-alpha-c96b78e0e",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-medium-image-zoom": "^4.3.1",
