--- a/package.json
+++ b/package.json
@@ -5,49 +5,46 @@
   "version": "0.1.0",
   "author": "Dustin Schau <dustinschau@gmail.com>",
   "dependencies": {
-    "@contentful/rich-text-types": "^14.1.2",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
+    "@contentful/rich-text-types": "^15.7.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
     "@mdx-js/react": "^1.6.22",
-    "@reach/skip-nav": "^0.13.2",
-    "@theme-ui/typography": "^0.3.5",
-    "airtable": "0.8.1",
+    "@reach/skip-nav": "^0.16.0",
+    "@theme-ui/typography": "^0.11.3",
     "autosize": "^4.0.2",
-    "formik": "^2.2.6",
-    "gatsby": "^3.9.1",
-    "gatsby-plugin-emotion": "^6.0.0",
+    "gatsby": "^4.3.0",
+    "gatsby-plugin-emotion": "^7.3.0",
     "gatsby-plugin-functions": "^0.1.0-7",
-    "gatsby-plugin-gatsby-cloud": "2.6.0-alpha-gatsby-plugin-gatsby-cloud.37",
-    "gatsby-plugin-google-analytics": "^3.0.0",
-    "gatsby-plugin-image": "^1.0.0",
-    "gatsby-plugin-layout": "^2.0.0",
-    "gatsby-plugin-manifest": "^3.0.0",
-    "gatsby-plugin-offline": "^4.0.0",
-    "gatsby-plugin-preact": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^4.0.0",
-    "gatsby-plugin-sharp": "^3.0.0",
-    "gatsby-plugin-sitemap": "^3.0.0",
-    "gatsby-plugin-theme-ui": "^0.3.5",
-    "gatsby-source-contentful": "^5.0.0",
-    "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-transformer-sharp": "^3.0.0",
-    "gatsby-transformer-yaml": "^3.0.0",
+    "gatsby-plugin-gatsby-cloud": "4.3.0",
+    "gatsby-plugin-google-analytics": "^4.3.0",
+    "gatsby-plugin-image": "^2.3.0",
+    "gatsby-plugin-layout": "^3.3.0",
+    "gatsby-plugin-manifest": "^4.3.0",
+    "gatsby-plugin-offline": "^5.3.0",
+    "gatsby-plugin-preact": "^6.3.0",
+    "gatsby-plugin-react-helmet": "^5.3.0",
+    "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-plugin-sitemap": "^5.3.0",
+    "gatsby-plugin-theme-ui": "^0.12.1",
+    "gatsby-source-contentful": "^7.1.0",
+    "gatsby-source-filesystem": "^4.3.0",
+    "gatsby-transformer-sharp": "^4.3.0",
+    "gatsby-transformer-yaml": "^4.3.0",
     "graphql-request": "^3.4.0",
     "normalize.css": "^8.0.1",
-    "preact": "^10.5.12",
-    "preact-render-to-string": "^5.1.12",
+    "preact": "^10.5.15",
+    "preact-render-to-string": "^5.1.19",
     "prop-types": "^15.7.2",
     "query-string": "^6.14.1",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-async-script-loader": "^0.3.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
-    "react-medium-image-zoom": "^4.3.1",
+    "react-medium-image-zoom": "^4.3.5",
     "react-star-ratings": "^2.3.0",
     "smooth-scroll": "^16.1.3",
-    "theme-ui": "^0.3.5",
-    "twilio": "^3.57.0",
+    "theme-ui": "^0.11.3",
     "typeface-arvo": "^1.1.13",
     "typeface-biorhyme": "^1.1.13",
     "typeface-cabin": "^1.1.13",
