--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
     "@reach/skip-nav": "^0.16.0",
     "@theme-ui/typography": "^0.11.3",
     "autosize": "^4.0.2",
+    "cobe": "^0.4.1",
     "gatsby": "^4.4.0",
     "gatsby-plugin-emotion": "^7.4.0",
-    "gatsby-plugin-functions": "^0.1.0-7",
     "gatsby-plugin-gatsby-cloud": "4.4.0",
     "gatsby-plugin-google-analytics": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-layout": "^3.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
     "gatsby-plugin-offline": "^5.4.0",
-    "gatsby-plugin-preact": "^6.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
     "gatsby-plugin-sharp": "^4.4.0",
     "gatsby-plugin-sitemap": "^5.4.0",
@@ -32,8 +31,6 @@
     "gatsby-transformer-yaml": "^4.4.0",
     "graphql-request": "^3.4.0",
     "normalize.css": "^8.0.1",
-    "preact": "^10.5.15",
-    "preact-render-to-string": "^5.1.19",
     "prop-types": "^15.7.2",
     "query-string": "^6.14.1",
     "react": "^17.0.2",
