--- a/package.json
+++ b/package.json
@@ -12,33 +12,32 @@
     "@reach/skip-nav": "^0.16.0",
     "@theme-ui/typography": "^0.11.3",
     "autosize": "^4.0.2",
-    "gatsby": "^4.5.2",
-    "gatsby-plugin-emotion": "^7.4.0",
-    "gatsby-plugin-functions": "^0.1.0-7",
-    "gatsby-plugin-gatsby-cloud": "4.4.0",
-    "gatsby-plugin-google-analytics": "^4.4.0",
-    "gatsby-plugin-image": "^2.4.0",
-    "gatsby-plugin-layout": "^3.4.0",
-    "gatsby-plugin-manifest": "^4.4.0",
-    "gatsby-plugin-offline": "^5.4.0",
-    "gatsby-plugin-preact": "^6.4.0",
-    "gatsby-plugin-react-helmet": "^5.4.0",
-    "gatsby-plugin-sharp": "^4.4.0",
-    "gatsby-plugin-sitemap": "^5.4.0",
-    "gatsby-plugin-theme-ui": "^0.13.0",
-    "gatsby-source-contentful": "^7.3.1",
-    "gatsby-source-filesystem": "^4.4.0",
-    "gatsby-transformer-sharp": "^4.4.0",
-    "gatsby-transformer-yaml": "^4.4.0",
+    "gatsby": "^5.0.0-next.6",
+    "gatsby-plugin-emotion": "^8.0.0-next.1",
+    "gatsby-plugin-gatsby-cloud": "^5.0.0-next.1",
+    "gatsby-plugin-google-analytics": "^5.0.0-next.1",
+    "gatsby-plugin-image": "^3.0.0-next.2",
+    "gatsby-plugin-layout": "^4.0.0-next.1",
+    "gatsby-plugin-manifest": "^5.0.0-next.2",
+    "gatsby-plugin-offline": "^6.0.0-next.2",
+    "gatsby-plugin-preact": "^7.0.0-next.1",
+    "gatsby-plugin-react-helmet": "^6.0.0-next.1",
+    "gatsby-plugin-sharp": "^5.0.0-next.2",
+    "gatsby-plugin-sitemap": "^6.0.0-next.3",
+    "gatsby-plugin-theme-ui": "^0.6.0-alpha.8",
+    "gatsby-source-contentful": "^8.0.0-next.2",
+    "gatsby-source-filesystem": "^5.0.0-next.1",
+    "gatsby-transformer-sharp": "^5.0.0-next.3",
+    "gatsby-transformer-yaml": "^5.0.0-next.2",
     "graphql-request": "^3.4.0",
     "normalize.css": "^8.0.1",
     "preact": "^10.5.15",
     "preact-render-to-string": "^5.1.19",
     "prop-types": "^15.7.2",
     "query-string": "^6.14.1",
-    "react": "^17.0.2",
+    "react": "^0.0.0-experimental-65e32e58b-20221019",
     "react-async-script-loader": "^0.3.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^0.0.0-experimental-65e32e58b-20221019",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-medium-image-zoom": "^4.3.5",
